original-headers/tcqdb.h


typedef struct {                         
  void *mmtx;                            
  TCBDB *idx;                            
  bool open;                             
  TCMAP *cc;                             
  uint64_t icsiz;                        
  uint32_t lcnum;                        
  TCMAP *dtokens;                        
  struct _TCIDSET *dids;                 
  uint32_t etnum;                        
  uint8_t opts;                          
  uint32_t fwmmax;                       
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
} TCQDB;
enum {                                   
  QDBTLARGE = 1 << 0,                    
  QDBTDEFLATE = 1 << 1,                  
  QDBTBZIP = 1 << 2,                     
  QDBTTCBS = 1 << 3                      
};
enum {                                   
  QDBOREADER = 1 << 0,                   
  QDBOWRITER = 1 << 1,                   
  QDBOCREAT = 1 << 2,                    
  QDBOTRUNC = 1 << 3,                    
  QDBONOLCK = 1 << 4,                    
  QDBOLCKNB = 1 << 5                     
};
enum {                                   
  QDBSSUBSTR,                            
  QDBSPREFIX,                            
  QDBSSUFFIX,                            
  QDBSFULL                               
};
extern const char *tdversion;
const char *tcqdberrmsg(int ecode);
TCQDB *tcqdbnew(void);
void tcqdbdel(TCQDB *qdb);
int tcqdbecode(TCQDB *qdb);
bool tcqdbtune(TCQDB *qdb, int64_t etnum, uint8_t opts);
bool tcqdbsetcache(TCQDB *qdb, int64_t icsiz, int32_t lcnum);
bool tcqdbsetfwmmax(TCQDB *qdb, uint32_t fwmmax);
bool tcqdbopen(TCQDB *qdb, const char *path, int omode);
bool tcqdbclose(TCQDB *qdb);
bool tcqdbput(TCQDB *qdb, int64_t id, const char *text);
bool tcqdbout(TCQDB *qdb, int64_t id, const char *text);
uint64_t *tcqdbsearch(TCQDB *qdb, const char *word, int smode, int *np);
bool tcqdbsync(TCQDB *qdb);
bool tcqdboptimize(TCQDB *qdb);
bool tcqdbvanish(TCQDB *qdb);
bool tcqdbcopy(TCQDB *qdb, const char *path);
const char *tcqdbpath(TCQDB *qdb);
uint64_t tcqdbtnum(TCQDB *qdb);
uint64_t tcqdbfsiz(TCQDB *qdb);
#define _TD_VERSION    "0.9.9"
#define _TD_LIBVER     110
#define _TD_FORMATVER  "0.9"
#define QDBSYNCMSGF    "started"         
#define QDBSYNCMSGL    "finished"        
typedef struct {                         
  uint64_t *ids;                         
  int num;                               
} QDBRSET;
typedef struct _TCIDSET {                
  uint64_t *buckets;                     
  uint32_t bnum;                         
  TCMAP *trails;                         
} TCIDSET;
enum {                                   
  TCTNLOWER = 1 << 0,                    
  TCTNNOACC = 1 << 1,                    
  TCTNSPACE = 1 << 2                     
};
void tcqdbsetdbgfd(TCQDB *qdb, int fd);
int tcqdbdbgfd(TCQDB *qdb);
bool tcqdbmemsync(TCQDB *qdb, int level);
bool tcqdbcacheclear(TCQDB *qdb);
uint64_t tcqdbinode(TCQDB *qdb);
time_t tcqdbmtime(TCQDB *qdb);
uint8_t tcqdbopts(TCQDB *qdb);
uint32_t tcqdbfwmmax(TCQDB *qdb);
uint32_t tcqdbcnum(TCQDB *qdb);
void tcqdbsetsynccb(TCQDB *qdb, bool (*cb)(int, int, const char *, void *), void *opq);
uint64_t *tcqdbresunion(QDBRSET *rsets, int rsnum, int *np);
uint64_t *tcqdbresisect(QDBRSET *rsets, int rsnum, int *np);
uint64_t *tcqdbresdiff(QDBRSET *rsets, int rsnum, int *np);
void tctextnormalize(char *text, int opts);
TCIDSET *tcidsetnew(uint32_t bnum);
void tcidsetdel(TCIDSET *idset);
void tcidsetmark(TCIDSET *idset, int64_t id);
bool tcidsetcheck(TCIDSET *idset, int64_t id);
void tcidsetclear(TCIDSET *idset);