original-headers/laputa.h

typedef struct {                         
  void *mmtx;                            
  char *path;                            
  bool wmode;                            
  uint8_t wopts;                         
  int womode;                            
  TCHDB *txdb;                           
  TCBDB *lsdb;                           
  TCWDB *idxs[JDBWDBMAX];                
  uint8_t inum;                          
  uint8_t cnum;                          
  uint32_t ernum;                        
  uint32_t etnum;                        
  uint64_t iusiz;                        
  uint8_t opts;                          
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
  uint8_t exopts;                        
} TCJDB;
enum {                                   
  JDBXNOTXT = 1 << 0                     
};
void tcjdbsetdbgfd(TCJDB *jdb, int fd);
int tcjdbdbgfd(TCJDB *jdb);
bool tcjdbmemsync(TCJDB *jdb, int level);
uint64_t tcjdbinode(TCJDB *jdb);
time_t tcjdbmtime(TCJDB *jdb);
uint8_t tcjdbopts(TCJDB *jdb);
void tcjdbsetsynccb(TCJDB *jdb, bool (*cb)(int, int, const char *, void *), void *opq);
void tcjdbsetexopts(TCJDB *jdb, uint32_t exopts);