original-headers/tcwdb.h

typedef struct {                         
  void *mmtx;                            
  TCBDB *idx;                            
  bool open;                             
  TCMAP *cc;                             
  uint64_t icsiz;                        
  uint32_t lcnum;                        
  TCMAP *dtokens;                        
  struct _TCIDSET *dids;                 
  uint32_t etnum;                        
  uint8_t opts;                          
  uint32_t fwmmax;                       
  bool (*synccb)(int, int, const char *, void *);  
  void *syncopq;                         
  bool (*addcb)(const char *, void *);   
  void *addopq;                          
} TCWDB;
void tcwdbsetsynccb(TCWDB *wdb, bool (*cb)(int, int, const char *, void *), void *opq);
void tcwdbsetaddcb(TCWDB *wdb, bool (*cb)(const char *, void *), void *opq);