tokyodystopia.lisp


(defanonenum 
	(JDBXNOTXT #.(cl:ash 1 0)))

(cffi:defcfun ("tcjdbsetdbgfd" tcjdbsetdbgfd) :void
  (jdb :pointer)
  (fd :int))

(cffi:defcfun ("tcjdbdbgfd" tcjdbdbgfd) :int
  (jdb :pointer))

(cffi:defcfun ("tcjdbmemsync" tcjdbmemsync) :pointer
  (jdb :pointer)
  (level :int))

(cffi:defcfun ("tcjdbinode" tcjdbinode) :pointer
  (jdb :pointer))

(cffi:defcfun ("tcjdbmtime" tcjdbmtime) :pointer
  (jdb :pointer))

(cffi:defcfun ("tcjdbopts" tcjdbopts) :pointer
  (jdb :pointer))

(cffi:defcfun ("tcjdbsetsynccb" tcjdbsetsynccb) :void
  (jdb :pointer)
  (cb :pointer)
  (opq :pointer))

(cffi:defcfun ("tcjdbsetexopts" tcjdbsetexopts) :void
  (jdb :pointer)
  (exopts :pointer))

(cffi:defcstruct TCQDB
	(mmtx :pointer)
	(idx :pointer)
	(open :pointer)
	(cc :pointer)
	(icsiz :pointer)
	(lcnum :pointer)
	(dtokens :pointer)
	(dids :pointer)
	(etnum :pointer)
	(opts :pointer)
	(fwmmax :pointer)
	(synccb :pointer)
	(syncopq :pointer))

(defanonenum 
	(QDBTLARGE #.(cl:ash 1 0))
	(QDBTDEFLATE #.(cl:ash 1 1))
	(QDBTBZIP #.(cl:ash 1 2))
	(QDBTTCBS #.(cl:ash 1 3)))

(defanonenum 
	(QDBOREADER #.(cl:ash 1 0))
	(QDBOWRITER #.(cl:ash 1 1))
	(QDBOCREAT #.(cl:ash 1 2))
	(QDBOTRUNC #.(cl:ash 1 3))
	(QDBONOLCK #.(cl:ash 1 4))
	(QDBOLCKNB #.(cl:ash 1 5)))

(defanonenum 
	QDBSSUBSTR
	QDBSPREFIX
	QDBSSUFFIX
	QDBSFULL)

(cffi:defcvar ("tdversion" tdversion)
 :string)

(cffi:defcfun ("tcqdberrmsg" tcqdberrmsg) :string
  (ecode :int))

(cffi:defcfun ("tcqdbnew" tcqdbnew) :pointer)

(cffi:defcfun ("tcqdbdel" tcqdbdel) :void
  (qdb :pointer))

(cffi:defcfun ("tcqdbecode" tcqdbecode) :int
  (qdb :pointer))

(cffi:defcfun ("tcqdbtune" tcqdbtune) :pointer
  (qdb :pointer)
  (etnum :pointer)
  (opts :pointer))

(cffi:defcfun ("tcqdbsetcache" tcqdbsetcache) :pointer
  (qdb :pointer)
  (icsiz :pointer)
  (lcnum :pointer))

(cffi:defcfun ("tcqdbsetfwmmax" tcqdbsetfwmmax) :pointer
  (qdb :pointer)
  (fwmmax :pointer))

(cffi:defcfun ("tcqdbopen" tcqdbopen) :pointer
  (qdb :pointer)
  (path :string)
  (omode :int))

(cffi:defcfun ("tcqdbclose" tcqdbclose) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbput" tcqdbput) :pointer
  (qdb :pointer)
  (id :pointer)
  (text :string))

(cffi:defcfun ("tcqdbout" tcqdbout) :pointer
  (qdb :pointer)
  (id :pointer)
  (text :string))

(cffi:defcfun ("tcqdbsearch" tcqdbsearch) :pointer
  (qdb :pointer)
  (word :string)
  (smode :int)
  (np :pointer))

(cffi:defcfun ("tcqdbsync" tcqdbsync) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdboptimize" tcqdboptimize) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbvanish" tcqdbvanish) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbcopy" tcqdbcopy) :pointer
  (qdb :pointer)
  (path :string))

(cffi:defcfun ("tcqdbpath" tcqdbpath) :string
  (qdb :pointer))

(cffi:defcfun ("tcqdbtnum" tcqdbtnum) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbfsiz" tcqdbfsiz) :pointer
  (qdb :pointer))

(cl:defconstant _TD_VERSION "0.9.9")

(cl:defconstant _TD_LIBVER 110)

(cl:defconstant _TD_FORMATVER "0.9")

(cl:defconstant QDBSYNCMSGF "started")

(cl:defconstant QDBSYNCMSGL "finished")

(cffi:defcstruct QDBRSET
	(ids :pointer)
	(num :int))

(cffi:defcstruct TCIDSET
	(buckets :pointer)
	(bnum :pointer)
	(trails :pointer))

(defanonenum 
	(TCTNLOWER #.(cl:ash 1 0))
	(TCTNNOACC #.(cl:ash 1 1))
	(TCTNSPACE #.(cl:ash 1 2)))

(cffi:defcfun ("tcqdbsetdbgfd" tcqdbsetdbgfd) :void
  (qdb :pointer)
  (fd :int))

(cffi:defcfun ("tcqdbdbgfd" tcqdbdbgfd) :int
  (qdb :pointer))

(cffi:defcfun ("tcqdbmemsync" tcqdbmemsync) :pointer
  (qdb :pointer)
  (level :int))

(cffi:defcfun ("tcqdbcacheclear" tcqdbcacheclear) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbinode" tcqdbinode) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbmtime" tcqdbmtime) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbopts" tcqdbopts) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbfwmmax" tcqdbfwmmax) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbcnum" tcqdbcnum) :pointer
  (qdb :pointer))

(cffi:defcfun ("tcqdbsetsynccb" tcqdbsetsynccb) :void
  (qdb :pointer)
  (cb :pointer)
  (opq :pointer))

(cffi:defcfun ("tcqdbresunion" tcqdbresunion) :pointer
  (rsets :pointer)
  (rsnum :int)
  (np :pointer))

(cffi:defcfun ("tcqdbresisect" tcqdbresisect) :pointer
  (rsets :pointer)
  (rsnum :int)
  (np :pointer))

(cffi:defcfun ("tcqdbresdiff" tcqdbresdiff) :pointer
  (rsets :pointer)
  (rsnum :int)
  (np :pointer))

(cffi:defcfun ("tctextnormalize" tctextnormalize) :void
  (text :string)
  (opts :int))

(cffi:defcfun ("tcidsetnew" tcidsetnew) :pointer
  (bnum :pointer))

(cffi:defcfun ("tcidsetdel" tcidsetdel) :void
  (idset :pointer))

(cffi:defcfun ("tcidsetmark" tcidsetmark) :void
  (idset :pointer)
  (id :pointer))

(cffi:defcfun ("tcidsetcheck" tcidsetcheck) :pointer
  (idset :pointer)
  (id :pointer))

(cffi:defcfun ("tcidsetclear" tcidsetclear) :void
  (idset :pointer))


